# hyper-traq

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: rust.yml
examples/: delete-user-tag.rs  get-direct-messages.rs  get-dm-channel.rs  get-me.rs  get-my-qr-code.rs  get-stamp-history.rs  get-user-icon.rs  get-user-stats.rs  get-user-tags.rs  get-user.rs  get-users.rs  patch-user-tag.rs  post-direct-message.rs  post-user-tag.rs
src/: apis.rs  auth.rs  client.rs  lib.rs  models.rs
src/apis/: me.rs  users.rs
