[package]
name = "hyper-traq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
rustls = "0.21"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
